# recalld

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
proto/: recalld.proto
src/: main.rs
src/api/: mod.rs  service.rs
src/capture/: grim.rs  mod.rs  portal.rs  wayshot.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs  pipeline.rs  scheduler.rs
src/embedding/: mod.rs
src/metadata/: mod.rs
src/ocr/: benchmark.rs  mod.rs
src/plugin/: events.rs  host.rs  manifest.rs  mod.rs
src/storage/: crypto.rs  db.rs  mod.rs
src/web/: mod.rs
src/web/static/: app.js  index.html  styles.css
utils/: generate-ocr-benchmark-screenshots.mjs  ocr-benchmark.example.toml  ocr-benchmark.toml  package-lock.json  package.json
