[package]
name = "recalld"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jesseconis/recalld"
homepage = ""
documentation = "https://docs.rs/recalld"
publish = false

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP API + web UI
axum = { version = "0.8", features = ["json"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"

# OCR
leptess = "0.14"

# Embeddings
fastembed = "4"

# WASM plugin runtime
wasmtime = "36"
wasmtime-wasi = "33"

# D-Bus (for future native portal screenshot API)
# zbus = { version = "5", default-features = false, features = ["tokio"] }

# Wayland screenshot (wlr-screencopy)
libwayshot = "0.7"

# Image processing
image = { version = "0.25", features = ["webp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

# Utilities
anyhow = "1"
rand = "0.9"
libc = "0.2"
tonic-prost-build = "0.14.5"
tempfile = "3.27.0"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tonic-prost-build = "0.14"

[workspace.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore💤: release {{crate_name}} v{{version}}"
tag-message = "chore💤: release {{crate_name}} v{{version}}"
